feat: implement get quest to complete
